auto move shaders

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,5 +33,9 @@ add_executable(SlimeMold main.cpp
 # Link GLAD and other libraries
 target_link_libraries(SlimeMold PRIVATE glad glfw3 opengl32
         kernel32 user32 gdi32 winspool shell32 ole32 oleaut32 uuid comdlg32 advapi32)
-
+add_custom_command(TARGET SlimeMold POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+        ${CMAKE_SOURCE_DIR}/Shaders
+        $<TARGET_FILE_DIR:SlimeMold>/Shaders
+)
 target_include_directories(SlimeMold PRIVATE imgui imgui/backends)
