Renamed from slime mold

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.30)
-project(SlimeMold LANGUAGES C CXX)
+project(ThreeBody LANGUAGES C CXX)
 
 
 # Include directories for GLFW, CUDA, and GLAD
@@ -14,9 +14,9 @@ add_library(glad STATIC src/glad.c)
 set_target_properties(glad PROPERTIES LINKER_LANGUAGE C)
 
 # Create the executable
-add_executable(SlimeMold main.cpp
-        Implementations/SlimeMoldGL.cpp
-        Implementations/SlimeMoldGL.h
+add_executable(ThreeBody main.cpp
+        Implementations/ThreeBodyGL.cpp
+        Implementations/ThreeBodyGL.h
         include/stb_image_write.h
         imgui/imgui.cpp
         imgui/imgui_draw.cpp
@@ -31,7 +31,7 @@ add_executable(SlimeMold main.cpp
 )
 
 # Link GLAD and other libraries
-target_link_libraries(SlimeMold PRIVATE glad glfw3 opengl32
+target_link_libraries(ThreeBody PRIVATE glad glfw3 opengl32
         kernel32 user32 gdi32 winspool shell32 ole32 oleaut32 uuid comdlg32 advapi32)
 
-target_include_directories(SlimeMold PRIVATE imgui imgui/backends)
+target_include_directories(ThreeBody PRIVATE imgui imgui/backends)
